--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <img src="images/Hamza.jpeg" class="card-img-top img-thumbnail" alt="...">
   <div class="card-body">
     <h5 class="card-title text-warning">Hamza Ejaz</h5>
-    <p class="card-text">Expert Front End Developer</p>
+    <p class="card-text">Expert Front End Develope</p>
   </div>
 </div>  </div>
       </div>
